--- a/templates/form.html
+++ b/templates/form.html
@@ -29,14 +29,17 @@
 			  <input type="radio" name="choice_radio" required="required" id="NoAnswer" value="NoAnswer">	No Answer  </input> <br>
 			
 		</div>
-
 		<button type="submit" value="submit">
 			Submit
 		</button>
 	</form>
+
 	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 	<br>
-   {{ prediction_text }}
+	<div class="white"> 
+		{{ prediction_text }}
+	</div>
+
 </body>
 
 </html>
