--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,11 @@
       </select>
 
       <input type="submit" value="Play" />
+      <br>
+      
+      <input class ="optn" type="button" value="Main_Page" onclick="window.location.href='www.iitj.ac.in'"></input>
+      <input class ="optn" type="button" value="Close_Window" onclick="window.close()"></input>
+
     </form>
 
     <div class="myGame"></div>
